# Service-for-selling-goods

./: .env_example  Dockerfile  LICENSE.md  README.md  docker-compose.yml  pyproject.toml
src/: exceptions.py  main.py
src/auth/: config.py  constants.py  dependencies.py  jwt.py  router.py  schemas.py  security.py  services.py
src/cart/: models.py  router.py  schemas.py  services.py
src/database/: config.py  settings.py
src/product/: models.py  router.py  schemas.py  services.py
src/users/: models.py  router.py  schemas.py  services.py  validators.py
tests/test_auth/: test_auth.py
